--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-*.python linguist-detectable=true
+static/* linguist-vendored
+TwitchPlays.py/static/* linguist-vendored
+TwitchPlays.py/templates/* linguist-vendored
